update JVM